# WorkTraining

./: .gitignore  README.md  setup.bat
Junior/Alexgram/client/: CMakeLists.txt  main.cpp  notification_client.h
Junior/Alexgram/server/: CMakeLists.txt  main.cpp
Junior/Alexgram/server/logic/: CMakeLists.txt
Junior/Alexgram/server/logic/include/logic/: message.h
Junior/Alexgram/server/notifications/: CMakeLists.txt
Junior/Alexgram/server/notifications/include/: output_notification_queue.h
Junior/Alexgram/server/notifications/include/notifications/: notification.h
Junior/Alexgram/server/notifications/src/custom_notifications/: bet_action.cpp  table_state.cpp  user_login.cpp
Junior/BattleOfTheFlatland/: CMakeLists.txt  README.md  main.cpp  setup.sh
Junior/BattleOfTheFlatland/app/: CMakeLists.txt
Junior/BattleOfTheFlatland/app/include/app/: app_rendering.h  input_handler.h  player.h  types.h
Junior/BattleOfTheFlatland/app/src/: app_rendering.cpp  input_handler.cpp  player.cpp
Junior/BattleOfTheFlatland/common/include/common/: global_settings.h  types.h
Junior/BattleOfTheFlatland/common/protobuf/: CMakeLists.txt  proto_generation.bat
Junior/BattleOfTheFlatland/common/protobuf/messages/: DirectionAction.proto  TableState.proto
Junior/BattleOfTheFlatland/common/protobuf/notifications/: DirectionAction.pb.cc  DirectionAction.pb.h  TableState.pb.cc  TableState.pb.h
Junior/BattleOfTheFlatland/common/sources/: CMakeLists.txt
Junior/BattleOfTheFlatland/common/sources/include/common/: enum.h  function.h
Junior/BattleOfTheFlatland/logic/: CMakeLists.txt
Junior/BattleOfTheFlatland/logic/include/logic/: dynamic_object.h  game_logic.h  state_objects.h
Junior/BattleOfTheFlatland/logic/src/: dynamic_object.cpp  game_logic.cpp
Junior/BattleOfTheFlatland/notifications/: CMakeLists.txt
Junior/BattleOfTheFlatland/notifications/include/notifications/: input_notification_queue.h  notification.h  notification_factory.h  notification_server.h  output_notification_queue.h  publisher.h  subscriber.h  websocket_handler.h  websocket_notification_server.h
Junior/BattleOfTheFlatland/notifications/src/: input_notification_queue.cpp  notification_factory.cpp  output_notification_queue.cpp  websocket_handler.cpp  websocket_notification_server.cpp
Junior/BattleOfTheFlatland/notifications/src/custom_notifications/: direction_action.cpp  user_logout.cpp
Junior/BattleOfTheFlatland/tests/: muve_snake_tests.cpp
Junior/BattleOfTheFlatland/tests/helpers/: state_objects_environment.h
Junior/BoostAsio/: README.md
Junior/BoostAsio/1_Introduction/: CMakeLists.txt  async_client.h  async_server.h  main.cpp  sync_server.h
Junior/BoostAsio/client/: CMakeLists.txt  main.cpp  sync_client.h
Junior/BoostAsio/server/: CMakeLists.txt  async_server.h  main.cpp  sync_server.h
Junior/CrashCourse/1. Basics of language/7. Expression/lesson/: CMakeLists.txt  cast.h  checked_integer.h  constexpr.h
Junior/CrashCourse/1. Basics of language/7. Expression/task_1/: CMakeLists.txt  heap_alloc.h  main.cpp
Junior/CrashCourse/1. Basics of language/8. Instructions/lesson/: CMakeLists.txt  narrow_caster.h
Junior/CrashCourse/1. Basics of language/8. Instructions/task_1/: CMakeLists.txt  conditional_statements.h  fibonacci_iterator.h  instructions_goto.h  main.cpp  namespace.h  random_number.h  structured_bindings.h
Junior/CrashCourse/1. Basics of language/9. Functions/task_1/: CMakeLists.txt  decltype.h  function_call_operator.h  lambda_expression.h  main.cpp  std_function.h  variable_functions.h
Junior/CrashCourse/2. Libraries and frameworks/10. Testing/lesson/: CMakeLists.txt  auto_brake.h  boost_test_auto_brake.h  gtest_auto_brake.h  main.cpp  user_test_auto_brake.h
Junior/CrashCourse/2_Libraries_and_frameworks/10_Testing/home_work/: CMakeLists.txt  gtest_auto_brake.h  main.cpp
Junior/CrashCourse/2_Libraries_and_frameworks/12_Utilities/lesson/: CMakeLists.txt  main.cpp
Junior/FlowerGame/: CMakeLists.txt  main.cpp  setup.bat  setup.sh
Junior/FlowerGame/app/: CMakeLists.txt
Junior/FlowerGame/app/include/app/: app_rendering.h  button_handler.h  types.h
Junior/FlowerGame/app/src/: app_rendering.cpp  button_handler.cpp
Junior/FlowerGame/common/: CMakeLists.txt
Junior/FlowerGame/common/include/common/: function.h  types.h
Junior/FlowerGame/logic/include/logic/: Flower.h  game_logic.h  state_objects.h
Junior/FlowerGame/logic/src/: snake.cpp  state_objects.cpp
Junior/FlowerGame/tests/: main.cpp
Junior/JEngine/JEngineCore/: CMakeLists.txt
Junior/JEngine/JEngineCore/include/jengineCore/: application.h  event.h  gui.h  log.h  settings.h  test.hpp  types.h
Junior/JEngine/JEngineCore/src/: application.cpp  gui.cpp  window.cpp  window.hpp
TestTasks/FlowerGame/: .gitignore  CMakeLists.txt  README.md  setup.bat  tasks.txt
TestTasks/FlowerGame/app/include/app/: app_settings.h  button_handler.h
TestTasks/FlowerGame/common/include/common/: enum.h  global_settings.h
TestTasks/FlowerGame/logic/include/logic/: snake.h
TestTasks/FlowerGame/logic/src/: flower.cpp  game_logic.cpp
TestTasks/FlowerGame/tests/: CMakeLists.txt  muve_snake_tests.cpp
TestTasks/FlowerGame/tests/helpers/: state_objects_environment.h
TestTasks/GlobalNetworkCodes/: CMakeLists.txt  README.md  main.cpp
TestTasks/GlobalNetworkCodes/app/: CMakeLists.txt
TestTasks/GlobalNetworkCodes/app/include/app/: operator_model_tree.h  styled_delegate_country_operator.h  window_app.h
TestTasks/GlobalNetworkCodes/app/src/: operator_model_tree.cpp  styled_delegate_country_operator.cpp  window_app.cpp
TestTasks/GlobalNetworkCodes/core/: CMakeLists.txt
TestTasks/GlobalNetworkCodes/core/include/core/: country_mobile.h  db_connector.h  type.h
TestTasks/GlobalNetworkCodes/core/src/: db_connector.cpp
TestTasks/GlobalNetworkCodes/resources/: resources.qrc
Trainee/ConsoleSnake/: CMakeLists.txt  board.cpp  board.h  game.cpp  game.h  menu.cpp  snake.cpp
Trainee/ConsoleSnake/console_snake/: console_snake.vcxproj
Trainee/TestProjectQueue/: CMakeLists.txt  client.cpp  client.h  main.cpp
(+219 files in other folders)
